# PeerLearningPlatform

./: .gitignore  .replit  approve_mentor.py  create_admin.py  dashboard_redirect.py  db.sqlite3  flow_planning.md  pyproject.toml  requirements.txt
admin_panel/: __init__.py  analytics_utils.py  apps.py  middleware.py  models.py  urls.py  views.py
attached_assets/: Pasted--PeerLearn-Dashboard-Audit-Enhancement-Master-Prompt-Objective-You-are-PeerLearn-Au-1745822530484.txt  Pasted--PeerLearn-EdTech-App-Master-Specification-1-Tech-S-1745781576050.txt  Pasted--PeerLearn-Instructional-Design-UI-UX-Enhancement-Master-Prompt-Role-You-are-PeerLe-1745827162314.txt  Pasted--PeerLearn-Learner-Dashboard-Live-Session-Only-Design-Master-Prompt-Role-You-are-Peer-1745826225245.txt  Pasted--PeerLearn-Premium-UI-Adaptation-Inspiration-from-Knowledge-Ed-Circle-Role-You-are--1745827172287.txt  Pasted-AttributeError-at-sessions-2-LearnerProfile-object-has-no-attribute-interests-Request-Method-1745813865574.txt  Pasted-Design-a-modern-clean-and-responsive-landing-page-hero-section-for-the-PeerLearn-app-an-education-1746080358408.txt  Pasted-Feature-Current-State-Requirement-Gap-Real-Time-Live-Video-Not-working-WebRTC-issue-Seamless-vide-1745820077868.txt  Pasted-FieldError-at-admin-panel-secure-login-Cannot-resolve-keyword-username-into-field-Choices-are--1745864498169.txt  Pasted-IntegrityError-at-register-learner-UNIQUE-constraint-failed-users-learnerprofile-user-id-Reques-1745813465321.txt  (+14 more)
learning_sessions/: __init__.py  admin.py  apps.py  consumers.py  forms.py  ml_recommendations.py  (+5 more)
(+94 files in other folders)
