[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "channels>=4.2.2",
    "channels-redis>=4.2.1",
    "daphne>=4.1.2",
    "django>=5.2",
    "flask-login>=0.6.3",
    "numpy>=2.2.5",
    "oauthlib>=3.2.2",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "razorpay>=1.4.2",
    "scikit-learn>=1.6.1",
]
